Towards #16: Fix compatibility issues with pre-2019.2 versions